--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  jekyll
 
 # Build settings
 #theme: minima
-remote_theme: "mmistakes/minimal-mistakes@4.19.2
+remote_theme: "mmistakes/minimal-mistakes@4.19.2"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
