--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ subtitle                 : "Data Scientist | Product Developer"
 name                     : "George Allan Esleta"
 description              : "An amazing website."
 url                      : "localhost:4000"
-#baseurl                  : 
+baseurl                  : "/portfolio"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
