--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "George Allan Esleta"
-  avatar           : "/assets/George.jpeg"
+  avatar           : "/assets/images/George.jpeg"
   bio              : "Data scientist with 9+ of product development experience in various industries (Financial Technology, Digital Media, Marketing Technology, Telecommunications). 
   Advocates for a product development approach to data science and analytics."
   location         : "Laguna, Philippines"
