--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ description              : "An amazing website."
 url                      : "localhost:4000"
 baseurl                  : "/portfolio"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : "/assets/images/GEORGE4.jpg"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
@@ -123,6 +123,9 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:gpesleta@gmail.com"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:gesleta@aim.edu"
     - #label: "Website"
       #icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -131,7 +134,7 @@ author:
       url: "https://www.linkedin.com/in/gpesleta/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/George.Esleta"
+      url: "https://twitter.com/GeorgeEsleta"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/gpesleta"
@@ -144,7 +147,7 @@ footer:
       url: "https://www.linkedin.com/in/gpesleta/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/George.Esleta"
+      url: "https://twitter.com/GeorgeEsleta"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/gpesleta"
