--- a/_config.yml
+++ b/_config.yml
@@ -281,6 +281,17 @@ compress_html:
 # Defaults
 defaults:
   # _posts
+    # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: # true
+      share: true
+      related: true
   - scope:
       path: ""
       type: pages
