--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: Curriculum Vitae
+  - title: "Curriculum Vitae"
     url: /assets/docs/Esleta_GeorgeAllan_CV_20200518.pdf
 
-  - title: Publications
+  - title: "Publications"
     url: /publications/
 
-  - title: Data Science Projects
+  - title: "Data Science Projects"
     url: /docs/projects/
