--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "George Allan Esleta"
   avatar           : "/assets/images/George.jpeg"
-  bio              : "Data scientist with 9+ of product development experience in various industries (Financial Technology, Digital Media, Telecommunications). 
+  bio              : "Data scientist with 9+ years of product development experience in Financial Technology, Digital Media and Telecommunications. 
   Advocates for a product development approach to data science and analytics."
   location         : "Laguna, Philippines"
   #email            : "gpesleta@gmail.com"
