--- a/_config.yml
+++ b/_config.yml
@@ -275,6 +275,11 @@ compress_html:
   ignore:
     envs: development
 
+# collections
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -300,3 +305,11 @@ defaults:
       comments: # true
       share: true
       related: true
+        # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
