--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,4 +6,4 @@ main:
     url: /categories/publications/
 
   - title: "Data Science Projects"
-    url: /docs/projects/
+    url: /categories/projects/
