--- a/_config.yml
+++ b/_config.yml
@@ -295,6 +295,7 @@ defaults:
       comments: # true
       share: true
       related: true
+      classes: wide
   - scope:
       path: ""
       type: pages
@@ -305,6 +306,7 @@ defaults:
       comments: # true
       share: true
       related: true
+      classes: wide
         # _portfolio
   - scope:
       path: ""
