--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ title_separator          : "-"
 subtitle                 : "Data Scientist | Product Developer"
 name                     : "George Allan Esleta"
 description              : "An amazing website."
-url                      : "localhost:4000"
+url                      : "https://gpesleta.github.io"
 baseurl                  : "/portfolio"
 #repository               : gpesleta/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/GEORGE4.jpg"
