--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ description              : "An amazing website."
 url                      : "https://gpesleta.github.io"
 baseurl                  : "/portfolio"
 #repository               : gpesleta/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/GEORGE4.jpg"
+#teaser                   : "/assets/images/GEORGE4.jpg"
 logo                     : "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
