--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,9 @@ main:
   - title: "About"
     url: /about/
 
+  - title: "CV"
+    url: /assets/docs/Esleta_GeorgeAllan_CV_20200518.pdf
+
   - title: "Publications"
     url: /categories/publications/
 
