--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ title                    : "George Allan Esleta"
 title_separator          : "-"
 subtitle                 : "Data Scientist | Product Developer"
 name                     : "George Allan Esleta"
-description              : "Data Scientist | Product Developer"
-url                      : "https://gpesleta.github.io"
+description              : "Portfolio of George Allan Esleta. George is a data scientist with more than nine years of product development experience in various industries (Financial Technology, Digital Media, Marketing Technology, Telecommunications). A Scrum practitioner, he advocates for an agile product development approach to data science and analytics."
+url                      : "http://www.gpesleta.com"
 baseurl                  : "/portfolio"
 #repository               : gpesleta/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   :
