--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ title                    : "George Allan Esleta"
 title_separator          : "-"
 subtitle                 : "Data Scientist | Product Developer"
 name                     : "George Allan Esleta"
-description              : "Portfolio of George Allan Esleta. George is a data scientist with more than nine years of product development experience in various industries (Financial Technology, Digital Media, Marketing Technology, Telecommunications). A Scrum practitioner, he advocates for an agile product development approach to data science and analytics."
+description              : "Portfolio of George Allan Esleta, a data scientist with more than nine years of product development experience in various industries (Financial Technology, Digital Media, Marketing Technology, Telecommunications). A Scrum practitioner, he advocates for an agile product development approach to data science and analytics."
 url                      : "http://www.gpesleta.com"
 baseurl                  : "/portfolio"
 #repository               : gpesleta/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -220,6 +220,8 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -228,6 +230,8 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
 
 # Archives
