--- a/_config.yml
+++ b/_config.yml
@@ -139,6 +139,8 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/gpesleta"
+    - label: "Sitemap"
+      url: "http://www.gpesleta.com/portfolio/sitemap.xml"
 
 
 # Reading Files
