--- a/_config.yml
+++ b/_config.yml
@@ -90,9 +90,9 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "GeorgeEsleta"
 facebook:
-  username               :
+  username               : 
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -101,7 +101,9 @@ og_image                 : # Open Graph/Twitter default site image
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links: 
+    - "https://twitter.com/GeorgeEsleta"
+    - "https://www.linkedin.com/in/gpesleta"
 
 # Analytics
 analytics:
