--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ facebook:
   username               : 
   app_id                 :
   publisher              :
-og_image                 : "/assets/images/George_sharing.jpeg"
+og_image                 : "/assets/images/GEORGE1_banner.jpg"
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
